Fix font sizing on mobile for nav

--- a/src/components/ml-navigation/ml-navigation.css
+++ b/src/components/ml-navigation/ml-navigation.css
@@ -112,7 +112,7 @@ ion-item:hover ion-icon {
 
 @media only screen and (max-width: 800px) {
   ion-item ion-label {
-    font-size: 11px;
+    font-size: 11px !important;
     width: 100%;
     display: block;
     padding: 0;
